--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,12 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.karumi:dexter:6.2.3'
+
+    def billing_version = "3.0.0"
+    implementation "com.android.billingclient:billing:$billing_version"
+
+    implementation 'androidx.preference:preference:1.1.1'
+
+    implementation 'com.anjlab.android.iab.v3:library:2.0.0'
+
 }
